# askalf

./: .dockerignore  .env.example  .env.production.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY-AUDIT.md  Dockerfile.dev  LICENSE  MIGRATION.md  README.md  VISION.md  check-shard-types.sql  docker-compose.agents.yml  docker-compose.hotreload.yml  docker-compose.prod.yml  docker-compose.selfhosted.yml  docker-compose.static.yml  docker-compose.vpn.yml  docker-compose.webhost.yml  docker-compose.yml  install.sh  package.json  pnpm-lock.yaml  setup.sh  sigil-monitor.js  tsconfig.base.json  vitest.config.ts  vitest.unit.config.ts
.claude/: settings.local.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
demos/: 04-episodic-memory.sh  05-full-system-demo.sh  README.md  demo.js
docs/: AGENT_ARCHITECTURE.md  API.md  ARCHITECTURE.md  DOCKERFILE_SECURITY_AUDIT.md  FLEET.md  FORGE_API_DOCUMENTATION.md  FORGE_API_ENDPOINTS.md  MASTER_PRODUCTION_PLAN.md  MCP_TOOLS_REFERENCE.md  METABOLIC_LOOP.md  METACOGNITION.md  PERFORMANCE_REPORT.md  PRODUCTION_PLAN.md  PUBLIC_KNOWLEDGE_API.md  SECURITY_AUDIT.md  SIGIL-EXPLAINED.txt  SIGIL.md  SUBSTRATE_PROJECT_STATUS.md  VERIFIED-FUNCTIONALITY.md  backup-system.md  demo-plan.md  fleet-manifest.json  forge-api.md  launch-posts.md
infrastructure/: README.md
scripts/: Dockerfile.backup  agent-fleet-audit.js  analyze-nginx-logs.sh  audit-fleet-tools.js  (+95 more)
(+1324 files in other folders)
