[package]
name = "askalf-desktop"
version = "2.9.9"
description = "AskAlf Desktop — self-healing AI workforce"
authors = ["AskAlf"]
license = "MIT"
repository = "https://github.com/askalf/askalf"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
